docker-registry/test-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
      volumeMounts:
        - name: docker-registry-storage
          mountPath: /data
  restartPolicy: Always
  volumes:
    - name: docker-registry-storage
      persistentVolumeClaim:
        claimName: docker-registry-pvc
