docker-registry/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: LoadBalancer
  selector:
    app: docker-registry
  ports:
  - port: 8080
    targetPort: 5000
    # nodePort: 30080
