docker-registry/ingress-registry.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    kubernetes.io/tls-acme: 'true'
  name: docker-registry
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.duy.io
      secretName: registry-ingress
  rules:
    - host: registry.duy.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
